Update web module to work with the single add image button.
All tests pass.

Also:
  * Log (to console) the content created events.
  * Zap all stale content section index code.
  * Alert user to pick image date if we could not extract it.
  * Store image name in core; let web figure out image src attribute.
  * Add an ID attribute to the add image button tag.
  * Simplify Stub logic by using Objects.equals() in predicate.
  * Simplify a web util method name to pathToID :: URI -> int -> long.